# deep-research

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  instruction.md  pyproject.toml  start_dev.command
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  config.py  main.py
backend/arxiv/: __init__.py  analyzer.py  client.py
backend/content/: __init__.py  extractor.py  fetcher.py
backend/llm/: __init__.py  client.py  prompts.py  synthesizer.py
backend/models/: __init__.py  reranker.py  schemas.py
backend/pipeline/: __init__.py  search_pipeline.py
backend/search/: aggregator.py  base.py  bing.py  brave.py  duckduckgo.py  google.py
backend/utils/: cache.py  logger.py
docs/: api-reference.md  architecture.md  contributing.md  deployment.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/reader/: page.tsx
frontend/src/components/: AnswerPanel.tsx  ApiConfigPanel.tsx  Header.tsx  LoadingAnimation.tsx  ReaderClient.tsx  SearchBar.tsx  SearchResults.tsx  SourceCard.tsx  ThemeToggle.tsx
frontend/src/hooks/: useRuntimeLLMConfig.ts  useSSE.ts  useSearch.ts
frontend/src/lib/: api.ts  readerState.ts  utils.ts
frontend/src/types/: index.ts
tests/: test_api.py  test_arxiv_mode.py  test_content.py  test_pipeline.py  test_search.py
