[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosearch-ai"
version = "0.1.0"
description = "AI-powered real-time search engine with source citations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AutoSearch Contributors" }]
keywords = ["ai", "search", "llm", "fastapi", "nextjs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.40.0",
  "aiohttp>=3.10.0",
  "trafilatura>=1.12.2",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2"
]

[project.optional-dependencies]
reranker = [
  "sentence-transformers>=3.0.1",
  "torch>=2.3.0"
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]
all = ["autosearch-ai[dev,reranker]"]

[project.scripts]
autosearch = "backend.main:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
